# libworm

./: CMakeLists.txt  elfw.c  elfw.h  elfx.c  elfx.h  inject.c  inject.h  injectw.c  injectw.h  libx.h  listw.c  listx.c  listx.h  main.c  worm.h
tests/: test_data_infect.c  test_text_infect.c  test_utils.c
